# KevDAQ

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: KevDAQ.hh
python/: kevdaq.py
src/: KevDAQ.cc
test/: KevDAQtest.cc
